[tool.poetry]
name = "biochatter-server"
version = "0.5.1"
description = "FastAPI server to provide RESTful API for biochatter"
authors = [
    "fengsh <shaohong.feng.78@gmail.com>",
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
Flask = "^3.0.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.1"
gunicorn = "^21.2.0"
neo4j-utils = "^0.0.7"
fastapi = "^0.111.0"
langchain = "0.2.5"
biochatter = "0.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]